--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="index.css"/>
     
-    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="index2.css"/>
 </head>
 
  
@@ -50,5 +50,6 @@
  <footer>
         <p>Projet de programmation par Julia Sireyjol, SMD3, Université PSL | L'objectif de ce site est de présenter quelques informations intéressantes sur les arbres, il n'est en aucun cas exhaustif sur le sujet </p>
     </footer>
+
 
 </html>
